--- a/terra/src/main/resources/application.properties
+++ b/terra/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-quarkus.grpc.clients."client-name".host=localhost
-quarkus.grpc.clients."client-name".port=9000
+quarkus.grpc.clients.terra-rpc.host=localhost
+quarkus.grpc.clients.terra-rpc.port=9000
