Add unimplemented create user rpc call

--- a/terra/src/main/resources/application.properties
+++ b/terra/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-quarkus.grpc.clients.terra-rpc.host=localhost
-quarkus.grpc.clients.terra-rpc.port=9000
+quarkus.grpc.clients.terra.host=localhost
+quarkus.grpc.clients.terra.port=9000
