--- a/terra/build.gradle
+++ b/terra/build.gradle
@@ -30,6 +30,7 @@ test {
     systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
     testLogging {
         exceptionFormat "full"
+        showStandardStreams true
     }
 }
 compileJava {
