--- a/terra/build.gradle
+++ b/terra/build.gradle
@@ -11,9 +11,10 @@ repositories {
 dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-arc'
+    implementation "io.quarkus:quarkus-grpc"
+    implementation 'io.quarkus:quarkus-hibernate-validator'
     implementation 'io.quarkus:quarkus-rest'
     implementation "io.quarkus:quarkus-rest-jackson" 
-    implementation "io.quarkus:quarkus-grpc"
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
 }
