--- a/terra/gradle.properties
+++ b/terra/gradle.properties
@@ -1,6 +1,7 @@
 #Gradle properties
+#Tue Jul 09 01:50:46 CEST 2024
+quarkusPlatformArtifactId=quarkus-bom
+quarkusPlatformGroupId=io.quarkus.platform
+quarkusPlatformVersion=3.12.1
 quarkusPluginId=io.quarkus
 quarkusPluginVersion=3.12.1
-quarkusPlatformGroupId=io.quarkus.platform
-quarkusPlatformArtifactId=quarkus-bom
-quarkusPlatformVersion=3.12.1
