Add postgres database

--- a/terra/src/main/resources/application.properties
+++ b/terra/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+# quarkus.banner.enabled=false
+# Configute the database
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = postgres
+quarkus.datasource.password = postgres
+%dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/terra_dev
+%test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/terra_test
+# Configure the gRPC server
 quarkus.grpc.clients.terra.host=localhost
 quarkus.grpc.clients.terra.port=9000
 # quarkus.grpc.server.use-separate-server=false
+# Configure the ORM
+%dev.quarkus.hibernate-orm.database.generation = create
+%test.quarkus.hibernate-orm.database.generation = drop-and-create
