Stop trimming trailing zeros in date times

--- a/terra/src/main/resources/application.properties
+++ b/terra/src/main/resources/application.properties
@@ -5,10 +5,11 @@ quarkus.datasource.username = postgres
 quarkus.datasource.password = postgres
 %dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/terra_dev
 %test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/terra_test
-# Configure the gRPC server
+# Configure the gRPC client
 quarkus.grpc.clients.terra.host=localhost
-quarkus.grpc.clients.terra.port=9000
-# quarkus.grpc.server.use-separate-server=false
+quarkus.grpc.clients.terra.port=8080
+# Configure the gRPC server
+quarkus.grpc.server.use-separate-server=false
 # Configure the ORM
 %dev.quarkus.hibernate-orm.database.generation = create
 %test.quarkus.hibernate-orm.database.generation = drop-and-create
