--- a/terra/build.gradle
+++ b/terra/build.gradle
@@ -33,7 +33,7 @@ test {
     systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
     testLogging {
         exceptionFormat "full"
-        showStandardStreams true
+        // showStandardStreams true
     }
 }
 compileJava {
