Get the native test environment ready

--- a/terra/src/main/resources/application.properties
+++ b/terra/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = postgres
+%prod.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/terra_prod
 %dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/terra_dev
 %test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/terra_test
 # Configure the gRPC client
@@ -11,5 +12,6 @@ quarkus.grpc.clients.terra.port=8080
 # Configure the gRPC server
 quarkus.grpc.server.use-separate-server=false
 # Configure the ORM
-%dev.quarkus.hibernate-orm.database.generation = create
+%prod.quarkus.hibernate-orm.database.generation = drop-and-create
+%dev.quarkus.hibernate-orm.database.generation = drop-and-create
 %test.quarkus.hibernate-orm.database.generation = drop-and-create
