Use snake case by default, and move some tests

--- a/terra/src/main/resources/application.properties
+++ b/terra/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Configure the dev homepage
 # quarkus.banner.enabled=false
 # Configute the database
 quarkus.datasource.db-kind = postgresql
@@ -7,11 +8,12 @@ quarkus.datasource.password = postgres
 %dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/terra_dev
 %test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/terra_test
 # Configure the gRPC client
-quarkus.grpc.clients.terra.host=localhost
-quarkus.grpc.clients.terra.port=8080
+quarkus.grpc.clients.terra.host = localhost
+quarkus.grpc.clients.terra.port = 8080
 # Configure the gRPC server
-quarkus.grpc.server.use-separate-server=false
+quarkus.grpc.server.use-separate-server = false
 # Configure the ORM
-%prod.quarkus.hibernate-orm.database.generation = drop-and-create
+%prod.quarkus.hibernate-orm.database.generation = create
 %dev.quarkus.hibernate-orm.database.generation = drop-and-create
 %test.quarkus.hibernate-orm.database.generation = drop-and-create
+quarkus.hibernate-orm.physical-naming-strategy = org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
